k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  namespace: hello-world
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
        - name: hello-world
          image: nginx:latest
          ports:
            - containerPort: 80


# # File: k8s/deployment.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: hello-world
#   namespace: hello-world
# spec:
#   replicas: 2
#   selector:
#     matchLabels:
#       app: hello-world
#   template:
#     metadata:
#       labels:
#         app: hello-world
#     spec:
#       nodeSelector:
#         eks.amazonaws.com/fargate-profile: hello-world-fargate
#       containers:
#         - name: hello-world
#           image: 183631319967.dkr.ecr.ap-south-1.amazonaws.com/hello-world:latest
#           ports:
#             - containerPort: 80
